# astcrt

./: .clang-format  .gitignore  LICENSE.txt  Makefile  README.md  build.ninja.template  configure  meson.build
astc/: bitmanip.h  colors.h  compress_block.cc  compress_block.h  compress_block.hpp  compress_texture.cc  data_size.h  data_size.hpp  data_size_table.h  endpoint_quantize_tables.h  endpoints_bounding_box.h  endpoints_bounding_box.hpp  endpoints_encode.h  endpoints_encode.hpp  endpoints_min_max.h  endpoints_min_max.hpp  endpoints_principal_components.cc  endpoints_principal_components.h  endpoints_quantize.h  endpoints_quantize.hpp  integer_sequence_encoding.h  integer_sequence_encoding_tables.h  matrix.cc  matrix.h  matrix.hpp  misc.h  partition.h  partition_best.h  partition_heuristic.h  partition_kmeans.h  store_block.h  store_block.hpp  vector.h  weights_quantize.h  weights_quantize.hpp
compress/: astc.cc
image/: astc.cc  astc.h  astc.hpp  bgra.cc  bgra.h  bgra.hpp  compressed.cc  compressed.h
pybits/: bise.py  codegen.py  datasize.py  partitions.py  quantize.py
src/astc/: bitmanip.hpp  colors.hpp  compress_block.cpp  compress_block.hpp  compress_texture.cpp  compress_texture.hpp  constants.hpp  data_size.hpp  data_size_table.hpp  dcheck.hpp  endpoint_quantize_tables.hpp  endpoints.hpp  endpoints_bounding_box.hpp  endpoints_encode.hpp  endpoints_min_max.hpp  endpoints_principal_components.cpp  endpoints_principal_components.hpp  (+11 more)
test/: main.cc
tools/: bench.sh  encode.mk  make-divisible.sh  metrics.py  plot-image.py  print-astc.py  run-encoders.sh
(+15 files in other folders)
